fixed user details on dark mode and misplaced order

--- a/style.css
+++ b/style.css
@@ -156,6 +156,7 @@ h3, h4 {
     flex: 1;
     border: none;
     font-weight: 400;
+    margin-right: 1rem;
 }
 
 .form-control:focus {
@@ -290,6 +291,10 @@ h3, h4 {
     grid-column-gap: 1.3rem;
 }
 
+.grid-item img:nth-child(2) {
+    display: none;
+}
+
 .icon {
     align-self: center;
 }
@@ -371,6 +376,7 @@ h3, h4 {
     .grid-items {
         grid-template-columns: 1fr 1fr;
         grid-template-rows: 1fr 1fr;
+        grid-auto-flow: column;
         font-size: 1.5rem;
     }
 }
@@ -424,4 +430,12 @@ h3, h4 {
 
 .dark-mode .mode-toggle:hover .mode-toggle__title {
     color: #90A4D4;
+}
+
+.dark-mode .grid-item img:nth-child(1) {
+    display: none;
+}
+
+.dark-mode .grid-item img:nth-child(2) {
+    display: block;
 }
